--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,26 @@
 spring:
   profiles:
     active: dev
+    include: secret
+  security:
+      oauth2:
+        client:
+          registration:
+            kakao:
+              clientId:
+              # 내가 받을 정보
+              scope: profile_nickname, account_email
+              client-name: Kakao
+              authorization-grant-type: authorization_code
+              # 카카오 개발자에 등록된 redirect-uri
+              redirect-uri: http://localhost:8010/login/oauth2/code/kakao
+              client-authentication-method: client_secret_post
+          provider:
+            kakao:
+              authorization-uri: https://kauth.kakao.com/oauth/authorize
+              token-uri: https://kauth.kakao.com/oauth/token
+              user-info-uri: https://kapi.kakao.com/v2/user/me
+              user-name-attribute: id
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
