--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
               token-uri: https://kauth.kakao.com/oauth/token
               user-info-uri: https://kapi.kakao.com/v2/user/me
               user-name-attribute: id
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
@@ -29,4 +30,7 @@ spring:
         default_batch_fetch_size: 100
         show_sql: true
         format_sql: true
-        use_sql_comments: true
+
+use_sql_comments: true
+custom:
+  genFileDirPath: C:\Users\OGH\genFile
