상품데이터 밀어 넣기,MemberRole 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,4 +17,4 @@ spring:
     hibernate:
       ddl-auto: create
 custom:
-  genFileDirPath: C:\Users\SBS\Pictures\genFile
+  genFileDirPath: C:\Users\OGH\Pictures\genFile
